# euroeval-custom-dataset

./: .gitignore  README.md  check_api_endpoint.py  classification_from_script.py  custom_datasets.py  euroeval_benchmark_results.jsonl  pyproject.toml  tmp.py  tmp1.py
.euroeval_cache/models--PleIAs--Monad/refs/: main
.euroeval_cache/models--PleIAs--Monad/snapshots/d8fce6b01ee5c5575bf00a74f6e6463ab5796112/: generation_config.json
data/: test.csv  train.csv  val.csv
